# libnbtpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  binary.hpp  endianness.cpp  endianness.hpp  frombinary.cpp  libnbtpp.pc.in  nbtfile.cpp  nbtfile.hpp  nbtpp.cpp  nbtpp.hpp  tests.cpp  tobinary.cpp
